continued on story
npc now enters house